tests/ui/attributes/key-value-expansion.stderr
error: unexpected expression: `(7u32)`
  --> $DIR/key-value-expansion.rs:21:6
   |
LL | bug!((column!()));
   |      ^^^^^^^^^^^

error: unexpected expression: `"bug" + "found"`
  --> $DIR/key-value-expansion.rs:27:14
   |
LL | / macro_rules! bug {
LL | |     () => {
LL | |         bug!("bug" + stringify!(found));
   | |              ^^^^^^^^^^^^^^^^^^^^^^^^^
LL | |     };
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `bug!`
LL |
LL |   bug!();
   |   ------ in this macro invocation

error: unexpected expression: `{ let res = ::alloc::fmt::format(format_args!("{0}", "u8")); res }.as_str()`
  --> $DIR/key-value-expansion.rs:48:23
   |
LL | / macro_rules! some_macro {
LL | |     ($t1: ty) => {
LL | |         doc_comment! {format!("{coor}", coor = stringify!($t1)).as_str()}
   | |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | |
LL | |     };
LL | | }
   | |_- in this expansion of `some_macro!`
LL |
LL |   some_macro!(u8);
   |   --------------- in this macro invocation

error: aborting due to 3 previous errors

